--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
         <main>
         </main>
 
-        <footer class="row">
-            <p class="col-12">&copy; Copyright Mathijs Slabbinck</p>
-        </footer>
+    <footer class="d-flex flex-column align-items-center justify-content-center">
+        <div class="row" id="bottomTributes">
+            <img class="bottomTributeImg" src="images/male.png" alt="male placeholder">
+            <p id="shownTributesDisctrict">Lorem</p>
+            <img class="bottomTributeImg" src="images/female.png" alt="female placeholder">
+        </div>
+    </footer>
+
     </div>
     <script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="assets/js/makeHTML.js"></script>
